# FirstCPlusPlusProject

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
FirstProject/: CMakeLists.txt  FirstProject.cpp  FirstProject.h
FirstProject/ChessItem/: CMakeLists.txt  ChessItem.cpp  ChessItem.h  chessItemsList.json
FirstProject/resources/: CMakeLists.txt
